[gd_scene load_steps=10 format=3 uid="uid://c8hyxdxnynsbd"]

[ext_resource type="PackedScene" uid="uid://b77rrjxl7avcx" path="res://Scenes&Scripts/Characters/Octagon/octagon.tscn" id="1_2duds"]
[ext_resource type="Script" path="res://Scenes&Scripts/Characters/Octagon/States/Lvl2DefenseState.gd" id="2_x4wum"]
[ext_resource type="Script" path="res://Scenes&Scripts/Characters/Octagon/States/ShortTeleportReady.gd" id="3_heq37"]
[ext_resource type="Texture2D" uid="uid://cnig81cfpd4jv" path="res://Sprites/Bar64x64.png" id="4_7jkbr"]
[ext_resource type="PackedScene" uid="uid://fqgjrj7b7tbq" path="res://Scenes&Scripts/Characters/Octagon/teleport_vfx_2.tscn" id="4_wyvho"]
[ext_resource type="Script" path="res://Scenes&Scripts/Characters/Octagon/States/ShortTeleportCharging.gd" id="5_53ugg"]
[ext_resource type="Script" path="res://Scenes&Scripts/Characters/Octagon/ChargeBar.gd" id="5_yql6v"]
[ext_resource type="Script" path="res://KeepOnScreen.gd" id="6_l16e7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mfqxy"]
radius = 164.012

[node name="Lvl2Octagon" instance=ExtResource("1_2duds")]

[node name="Defense" parent="HierarchicalStateMachine" index="1" node_paths=PackedStringArray("entry")]
script = ExtResource("2_x4wum")
entry = NodePath("ShortTeleportReady")

[node name="ShortTeleportReady" type="Node" parent="HierarchicalStateMachine/Defense" index="0"]
script = ExtResource("3_heq37")
min_teleport_range = 300.0
max_teleport_range = 400.0
teleport_effect = ExtResource("4_wyvho")

[node name="ShortTeleportCharging" type="Node" parent="HierarchicalStateMachine/Defense" index="1" node_paths=PackedStringArray("short_teleport_bar")]
script = ExtResource("5_53ugg")
short_teleport_bar = NodePath("../../../ShortTeleportChargeBar")

[node name="KeepOnScreen" parent="ChargeBar" index="0"]
metadata/_edit_lock_ = true

[node name="ShortTeleportChargeBar" type="TextureProgressBar" parent="." index="11"]
visible = false
offset_left = -106.0
offset_top = -88.0
offset_right = -42.0
offset_bottom = -24.0
mouse_filter = 2
value = 59.0
texture_under = ExtResource("4_7jkbr")
texture_progress = ExtResource("4_7jkbr")
tint_under = Color(0.333333, 0.329412, 0.329412, 1)
tint_progress = Color(0.717647, 0, 0.180392, 1)
script = ExtResource("5_yql6v")

[node name="KeepOnScreen" type="Control" parent="ShortTeleportChargeBar" index="0"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_l16e7")
_active = false
metadata/_edit_lock_ = true

[node name="BulletDetectArea" type="Area2D" parent="." index="12"]
visible = false
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetectArea" index="0"]
shape = SubResource("CircleShape2D_mfqxy")
debug_color = Color(0.984314, 0, 0.337255, 0.419608)

[connection signal="short_teleport_used" from="HierarchicalStateMachine/Defense/ShortTeleportReady" to="HierarchicalStateMachine/Defense" method="_on_short_teleport_used"]
[connection signal="short_teleport_charged" from="HierarchicalStateMachine/Defense/ShortTeleportCharging" to="HierarchicalStateMachine/Defense" method="_on_short_teleport_charged"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="ShortTeleportChargeBar" method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="ShortTeleportChargeBar" method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="BulletDetectArea" to="HierarchicalStateMachine/Defense/ShortTeleportReady" method="_on_body_detected"]
[connection signal="area_exited" from="BulletDetectArea" to="HierarchicalStateMachine/Defense/ShortTeleportReady" method="_on_body_lost"]
